header and tabheader and pargaraph updated

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GIt Understanding</title>
+<title>GItHUB Learning</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is place is for headerThis is a heading</h1>
+<p>Beutiful Day... Happy Ugadhi to all</p>
 
 </body>
 </html>
